feature: [Dieta Especial] Visualizar na Dieta Especial de Alteração de Unidade Escolar o Período de Vigência da Dieta. feature 28936-29452

--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -256,6 +256,11 @@ div.caption-choices {
     font-weight: bold;
     color: $blackInput;
   }
+  .value-sp {
+    font-weight: bold;
+    color: $blackInput;
+    padding-left: 8px;
+  }
   .value-important {
     font-weight: bold;
     font-size: 15px;
