--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
@@ -71,6 +71,26 @@
   }
 }
 
+.tabela-frequencia-por-dia {
+  .report-label-value {
+    margin-top: 0px;
+    p {
+      margin-bottom: 0px;
+    }
+  }
+  .cabecalho-tabela {
+    min-height: 2em;
+  }
+  .linha-tabela {
+    min-height: 2em;
+  }
+  .cabecalho-tabela,
+  .linha-tabela {
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+  }
+}
+
 .tabela-dieta-especial-3col,
 .tabela-dieta-especial-4col {
   .report-label-value {
