feature: [Dieta Especial] PDF campo para gestão Mista, Parceira e Direta. feature 28985-29468

--- a/src/components/Shareable/AlertaTextoVermelho/styles.scss
+++ b/src/components/Shareable/AlertaTextoVermelho/styles.scss
@@ -3,4 +3,8 @@
 .alerta-texto-vermelho {
   color: $redAlert;
   font-weight: bold;
+  font-size: 14px;
+}
+.altura-minima {
+  min-height: 5rem;
 }
