Ajusta estilo do progresso do fluxo quando autorizado

--- a/src/components/Shareable/FluxoDeStatus/style.scss
+++ b/src/components/Shareable/FluxoDeStatus/style.scss
@@ -45,7 +45,7 @@
         color: #fff;
         border-color: $green !important;
       }
-      + li.active:after {
+      &:after {
         background-color: $green !important;
       }
       + li.disapproved:after {
