Cria modal de confirmação de requisições

--- a/src/components/Shareable/Botao/style.scss
+++ b/src/components/Shareable/Botao/style.scss
@@ -68,10 +68,13 @@ button.general-button {
     color: $green;
     border: 1px solid $green;
     background-color: transparent;
-    i {
-      color: $green;
+    &:not(:disabled) {
+      i {
+        color: $green;
+      }
     }
-    &:hover {
+
+    &:hover:not(:disabled) {
       color: $white;
       background-color: $greenButtonHover;
       i {
