--- a/src/components/screens/Logistica/GestaoRequisicaoEntrega/styles.scss
+++ b/src/components/screens/Logistica/GestaoRequisicaoEntrega/styles.scss
@@ -1,3 +1,7 @@
+.card-gestao-requisicao-entrega {
+  margin-bottom: 15em !important;
+}
+
 .gestao-requisicao-entrega {
   .menu-inferior {
     font-size: 14px !important;
