bug: [Dieta Especial] Erro na visualização dos alimentos substitutos na autorização da Dieta Especial. bug 31499-31805

--- a/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/SubstituicoesField/MultiSelect/style.scss
+++ b/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/SubstituicoesField/MultiSelect/style.scss
@@ -11,4 +11,12 @@ div.multi-select {
     span {
     color: #5d515b !important;
   }
+
+  .dropdown .dropdown-heading .dropdown-heading-value span {
+    float: left;
+    max-width: 16rem;
+    padding: 0 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
