Modifica exbição das embalagens

--- a/src/components/screens/Logistica/DisponibilizacaoDeSolicitacoes/style.scss
+++ b/src/components/screens/Logistica/DisponibilizacaoDeSolicitacoes/style.scss
@@ -1,80 +1,6 @@
 @import "styles/variables.scss";
 
-div.disponibilizacao-solicitacoes {
-  header {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    color: #42474a;
-  }
-
-  table.solicitacoes {
-    font-size: 14px;
-    width: 100%;
-    border: 1px solid #e9eaea;
-    border-radius: 4px;
-
-    thead {
-      tr {
-        color: $blackInput;
-        border: 1px solid #e9eaea;
-        background-color: #f5f6f8;
-        th {
-          padding: 15px;
-          border-right: 1px solid #e9eaea;
-        }
-      }
-    }
-    tbody {
-      tr {
-        color: $blackInput;
-        border: 1px solid #e9eaea;
-        font-weight: bold;
-        td {
-          padding: 15px;
-          border-right: 1px solid #e9eaea;
-          &.link {
-            cursor: pointer;
-            color: $blue;
-            font-size: 12px;
-            padding: 10px;
-            text-align: center;
-            &.red {
-              color: $red;
-            }
-          }
-          &.link-desativo {
-            cursor: default;
-            color: $blue;
-            font-size: 12px;
-            padding: 10px;
-            text-align: center;
-            &.red {
-              color: $red;
-            }
-          }
-        }
-        &.guia,
-        &.guia-alimento {
-          font-weight: normal;
-          border-top: 1px solid #e9eaea;
-          td {
-            border: none;
-            span {
-              font-weight: bold;
-            }
-          }
-        }
-        &.guia-alimento {
-          border-top: hidden;
-        }
-      }
-    }
-  }
-}
-
-.resultado-busca-requisicao-envio-dilog {
+.resultado-busca-requisicao-envia-dilog {
   margin-top: 10px;
 
   header {
@@ -90,5 +16,107 @@ div.disponibilizacao-solicitacoes {
     border: 1px solid #e9eaea;
     box-sizing: border-box;
     margin: 10px 0 15px 0;
+
+    .grid-table {
+      height: 48px;
+      font-size: 14px;
+      line-height: 16px;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      display: grid;
+      grid-template-columns: 0.6fr 0.6fr 0.8fr 0.7fr 0.5fr 0.5fr 0.5fr;
+    }
+
+    .header-table {
+      background: #f5f6f8;
+      color: #42474a;
+      font-weight: bold;
+      div {
+        text-align: left;
+        display: grid;
+        align-items: center;
+        height: 100%;
+        padding-left: 8px;
+        &:not(:last-child) {
+          border-right: 1px solid #e9eaea;
+        }
+
+        &:last-child {
+          border-right: 0px solid #e9eaea;
+        }
+      }
+    }
+
+    .body-table {
+      font-weight: 500;
+      color: #686868;
+
+      .desativar-borda {
+        border-left: 0px solid #e9eaea;
+        color: #42474a;
+        font-weight: 900;
+      }
+
+      .fas {
+        cursor: pointer;
+        font-weight: 900;
+        font-size: 16px;
+        line-height: 18px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.01em;
+        font-size: 12px !important;
+
+        /* $neutral/dark */
+
+        color: #42474a;
+      }
+
+      div {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #e9eaea;
+        text-align: left;
+        padding-left: 8px;
+        &:not(:last-child) {
+          border-right: 1px solid #e9eaea;
+        }
+      }
+
+      div:last-child {
+        border-right: 0px solid #e9eaea;
+      }
+    }
+
+    .resultado-busca-detalhe {
+      font-size: 14px;
+      color: #686868;
+      font-style: normal;
+      font-weight: normal;
+      border-bottom: 1px solid #e9eaea;
+    }
+
+    .acoes {
+      font-size: 14px !important;
+      display: inline-block;
+    }
+
+    .confirmar {
+      color: $green !important;
+      display: inline !important;
+      padding-left: 0;
+    }
+
+    .alterar {
+      color: $blue !important;
+      display: inline !important;
+    }
+
+    .imprimir {
+      display: inline !important;
+    }
   }
 }
