feature: [Dieta Especial] Criar Regra para não apresentar dieta do aluno que não pertence a unidade educacional. feature 32229-32591

--- a/src/components/screens/DietaEspecial/Escola/style.scss
+++ b/src/components/screens/DietaEspecial/Escola/style.scss
@@ -49,6 +49,10 @@ div.datepicker
   // background-color: #dadada;
 }
 
+.color-disabled {
+  background-color: #dadada !important;
+}
+
 div.current-diets {
   font-size: 14px;
   .no-diets {
