--- a/src/components/Shareable/TextArea/TextAreaWYSIWYG/style.scss
+++ b/src/components/Shareable/TextArea/TextAreaWYSIWYG/style.scss
@@ -1,5 +1,13 @@
 @import "../../../../styles/variables.scss";
 
+.wrapper-class-disabled {
+  background-color: #dadada;
+}
+
+.wrapper-class-hidden {
+  visibility: hidden !important;
+}
+
 .DraftEditor-root {
   color: $blackInput;
   overflow-y: hidden;
