feature: [Dieta Especial] Na Autorização da Dieta Especial criar busca no campo Alimento. feature 32221-32606

--- a/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/SubstituicoesField/style.scss
+++ b/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/SubstituicoesField/style.scss
@@ -4,3 +4,11 @@
     justify-content: space-evenly;
   }
 }
+
+.select-produto > .ant-form-item {
+  margin-bottom: 0 !important;
+}
+
+.select-produto .ant-form-item-control {
+  line-height: 0 !important;
+}
