Corrige filtro de motivos

--- a/src/components/screens/Logistica/GestaoSolicitacaoAlteracao/components/ListagemSolicitacoes/styles.scss
+++ b/src/components/screens/Logistica/GestaoSolicitacaoAlteracao/components/ListagemSolicitacoes/styles.scss
@@ -92,6 +92,7 @@
     }
 
     .resultado-busca-detalhe {
+      border-bottom: 1px solid #e9eaea;
       font-size: 14px;
       color: #686868;
       font-style: normal;
