Página de Conferencia de guia
Página de conferencia de guia
Botão "Conferir" na página conferir entrega
Alteração no componente de tabela alimento consolidado para ser mais flexivel
Componente de tooltip
Inclusao de Tooltip nos inputs de: Texto, data e horario
Adicao de label e indicador de erro no input de horario

--- a/src/components/Shareable/Input/InputHorario/style.scss
+++ b/src/components/Shareable/Input/InputHorario/style.scss
@@ -1,5 +1,24 @@
+@import "../../../../styles/variables.scss";
+
 .input-horario {
   height: 32px;
+
+  span.required-asterisk {
+    color: $red;
+    padding-right: 5px;
+  }
+
+  .invalid-field {
+    input:not(:focus) {
+      box-shadow: none;
+      border-color: $red;
+    }
+  }
+
+  .col-form-label {
+    font-size: 14px;
+  }
+
   .ant-time-picker {
     width: 100%;
 
