Cria pagina de confêrencia de guia com ocorrencia

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,6 +24,7 @@ $grayInputBackground: #e8e8e8;
 $grayLight: #a8a8a8;
 $grayPlaceholder: #a4a4a4;
 $green: #198459;
+$greenDark: #0c6b45;
 $greenBackgroundToastSuccess: #d4edda;
 $greenBackgroundTable: #acd2b1;
 $greenButtonHover: #0c6b45;
