--- a/src/components/screens/Logistica/ConferenciaDeGuiaComOcorrencia/styles.scss
+++ b/src/components/screens/Logistica/ConferenciaDeGuiaComOcorrencia/styles.scss
@@ -19,5 +19,10 @@
       font-size: 18px;
       line-height: 21px;
     }
+    .info-field {
+      font-style: italic;
+      font-weight: 400;
+      font-size: 12px;
+    }
   }
 }
