Finalização da página de recebimento com ocorrencia

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,6 +25,7 @@ $grayLight: #a8a8a8;
 $grayPlaceholder: #a4a4a4;
 $green: #198459;
 $greenDark: #0c6b45;
+$greenLight: #20aa73;
 $greenBackgroundToastSuccess: #d4edda;
 $greenBackgroundTable: #acd2b1;
 $greenButtonHover: #0c6b45;
