Página de Resumo final da Conferencia de Guia

--- a/src/components/Shareable/TextArea/style.scss
+++ b/src/components/Shareable/TextArea/style.scss
@@ -14,6 +14,7 @@ div.textarea {
     }
     &::placeholder {
       color: $grayPlaceholder;
+      text-align: left;
     }
     &.invalid-field:not(:focus):invalid {
       box-shadow: none;
