Botão indicador de imagem anexada

--- a/src/components/screens/Logistica/ConferenciaDeGuiaResumoFinal/styles.scss
+++ b/src/components/screens/Logistica/ConferenciaDeGuiaResumoFinal/styles.scss
@@ -26,6 +26,10 @@
         }
       }
 
+      .icone-arquivo {
+        width: 2%;
+      }
+
       .nome-alimento {
         width: 20%;
       }
