Feature: criar componentes para detalhamento do protocolo padrão na page de consulta

--- a/src/components/screens/DietaEspecial/ConsultaProtocoloPadraoDieta/componentes/Tabela/style.scss
+++ b/src/components/screens/DietaEspecial/ConsultaProtocoloPadraoDieta/componentes/Tabela/style.scss
@@ -13,3 +13,19 @@
     color: #42474a;
   }
 }
+
+.data-title {
+  color: #198459;
+  font-weight: bold;
+  font-size: 14px;
+  font-family: Roboto;
+  font-style: normal;
+}
+
+p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  color: #42474a;
+}
