--- a/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/DataTermino/componentes/DataOpcional/style.scss
+++ b/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/DataTermino/componentes/DataOpcional/style.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../../../styles/variables.scss";
+@import "styles/variables.scss";
 
 div.data-opcional {
   span.required-asterisk {
