--- a/src/components/screens/Logistica/ConsultaRequisicaoEntregaDilog/components/ListagemSolicitacoes/styles.scss
+++ b/src/components/screens/Logistica/ConsultaRequisicaoEntregaDilog/components/ListagemSolicitacoes/styles.scss
@@ -11,6 +11,25 @@
     color: #42474a;
   }
 
+  .ant-switch-checked {
+    background-color: #198459;
+  }
+  .ant-click-animating-node {
+    -webkit-box-shadow: 0 0 0 0 #198459;
+    box-shadow: 0 0 0 0 #198459;
+  }
+
+  .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: #198459;
+    border-color: #ffffff;
+  }
+
+  .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+  .ant-checkbox:hover .ant-checkbox-inner,
+  .ant-checkbox-input:focus + .ant-checkbox-inner {
+    border-color: #198459;
+  }
+
   article {
     border-radius: 4px 4px 0px 0px;
     border: 1px solid #e9eaea;
@@ -25,12 +44,12 @@
       align-items: center;
       text-align: center;
       display: grid;
-      grid-template-columns: 0.6fr 0.6fr 0.8fr 0.7fr 0.5fr 0.5fr;
+      grid-template-columns: 0.15fr 0.6fr 0.6fr 0.8fr 0.7fr 0.5fr 0.5fr 0.1fr;
     }
 
     .header-table {
-      background: #f5f6f8;
-      color: #42474a;
+      background: #198459;
+      color: #ffffff;
       font-weight: bold;
       div {
         text-align: left;
@@ -56,22 +75,6 @@
         border-left: 0px solid #e9eaea;
         color: #42474a;
         font-weight: 900;
-      }
-
-      .fas {
-        cursor: pointer;
-        font-weight: 900;
-        font-size: 16px;
-        line-height: 18px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        letter-spacing: 0.01em;
-        font-size: 12px !important;
-
-        /* $neutral/dark */
-
-        color: #42474a;
       }
 
       div {
