Modal de detalhamento de Guia na página "Requisicao de entrega"

--- a/src/components/screens/Logistica/ConsultaRequisicaoEntregaDilog/components/ListagemSolicitacoes/styles.scss
+++ b/src/components/screens/Logistica/ConsultaRequisicaoEntregaDilog/components/ListagemSolicitacoes/styles.scss
@@ -132,6 +132,10 @@
         background: #f3f3f3;
         color: #42474a;
       }
+
+      .body-table:hover {
+        background: #f9f9f9;
+      }
     }
 
     .acoes {
