--- a/src/components/screens/Produto/AvaliarReclamacaoProduto/components/TabelaProdutos/style.scss
+++ b/src/components/screens/Produto/AvaliarReclamacaoProduto/components/TabelaProdutos/style.scss
@@ -110,10 +110,10 @@
   }
 
   .botao-reclamacao {
-    display: flex;
     margin-bottom: 2em;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
   }
 
   .botao-ver-produto {
@@ -131,5 +131,8 @@
     line-height: 16px;
     letter-spacing: 0em;
     text-align: left;
+  }
+  .botaoResponder {
+    float: right;
   }
 }
