Melhorias na tela "Conferencia de guia de remessa"
alteração no nome "qtde" pra "quantidade" na tabela
inclusão de um radio button que permite o usuário escolher se a entrega ocorreu normalmente
mudança dos campos preenchiveis para o final da página, abaixo do radio button, aparecendo apenas quando o botão "sim" estiver marcado
mudança nos botoes sim e não para ter novos textos e aparecerem condicionalmente ao radio button

--- a/src/components/screens/Logistica/ConferenciaDeGuia/styles.scss
+++ b/src/components/screens/Logistica/ConferenciaDeGuia/styles.scss
@@ -1,8 +1,58 @@
+@import "../../../../styles/variables.scss";
+
 .card-conferencia-guia {
   .conferencia-guia {
     .texto-confirma-entrega {
       margin-top: calc(1rem + 1px);
       margin-bottom: calc(1rem + 1px);
+      color: #42474a;
+
+      .fa-exclamation-triangle {
+        color: #ab6701;
+        padding-right: 8px;
+      }
+    }
+
+    .ant-radio-inner::after {
+      background-color: $green;
+    }
+
+    .ant-radio-checked::after {
+      border: 1px solid $green;
+    }
+
+    .ant-radio-checked .ant-radio-inner {
+      border-color: $green;
+    }
+
+    .ant-radio-wrapper:hover .ant-radio,
+    .ant-radio:hover .ant-radio-inner,
+    .ant-radio-input:focus + .ant-radio-inner {
+      border-color: $green;
+    }
+
+    .mb-custom {
+      margin-bottom: 5rem;
+    }
+
+    .ant-radio-inner {
+      width: 20px;
+      height: 20px;
+      border-color: #42474a;
+      border-width: 2px;
+    }
+
+    .ant-radio-inner::after {
+      width: 6px;
+      height: 6px;
+      top: 5px;
+      left: 5px;
+    }
+
+    .ant-radio-wrapper {
+      font-size: 16px;
+      line-height: 24px;
+      border-color: #42474a;
     }
 
     .tabela-conferencia-guia {
