Alterações Layout Solicitação de Alteração U.E.

--- a/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/SubstituicoesField/style.scss
+++ b/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/componentes/SubstituicoesField/style.scss
@@ -55,3 +55,8 @@
   color: #858796;
   // .ant-calendar-picker-icon::after, .ant-time-picker-icon::after, .ant-picker-icon::after, .ant-select-arrow, .ant-cascader-picker-arrow {
 }
+
+.label {
+  color: #686868;
+  font-weight: 500;
+}
