--- a/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/style.scss
+++ b/src/components/screens/DietaEspecial/Relatorio/componentes/FormAutorizaDietaEspecial/style.scss
@@ -8,3 +8,20 @@
   background: #3e8459;
   color: #fff;
 }
+
+.orientacoes {
+  background: #dadada;
+  border: 1px solid #d1d3e2;
+  border-radius: 0.35rem;
+  padding: 1.5%;
+  min-height: 150px;
+  p {
+    color: #42474a;
+    font-weight: 900;
+  }
+}
+
+.label {
+  color: #686868;
+  font-weight: 500;
+}
