--- a/src/components/screens/Cadastros/ConsultaKitLanche/components/ListagemKits/styles.scss
+++ b/src/components/screens/Cadastros/ConsultaKitLanche/components/ListagemKits/styles.scss
@@ -26,7 +26,7 @@
       align-items: center;
       text-align: center;
       display: grid;
-      grid-template-columns: 0.8fr 2fr 0.8fr 0.6fr 0.4fr;
+      grid-template-columns: 0.8fr 2fr 0.8fr 0.6fr;
     }
 
     .header-table {
@@ -55,16 +55,6 @@
         border-left: 0px solid #e9eaea;
         color: #42474a;
         font-weight: 900;
-      }
-
-      .link-acoes {
-        cursor: pointer;
-        text-decoration: underline;
-        padding-right: 4px;
-      }
-
-      .green {
-        color: $green;
       }
 
       ul,
