--- a/src/components/Shareable/Input/style.scss
+++ b/src/components/Shareable/Input/style.scss
@@ -14,6 +14,19 @@ div.input {
       margin-top: 10px;
     }
   }
+  &.pass {
+    position: relative;
+    input {
+      width: 100%;
+    }
+    i {
+      color: $blackInput;
+      position: absolute;
+      right: 15px;
+      top: 48px;
+      cursor: pointer;
+    }
+  }
   span.required-asterisk {
     color: $red;
     padding-right: 5px;
