--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -47,6 +47,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-font-smoothing: antialiased;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
