--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -43,14 +43,15 @@ a.hyperlink {
     }
     .logo-sigpae {
       text-align: center;
-      @media screen and (max-height: 610px) {
-        padding-top: 2rem;
+      @media screen and (max-width: 768px) {
+        padding-top: 1rem;
+        padding-bottom: 0.5rem;
         img {
           height: auto;
           width: 300px;
         }
       }
-      @media screen and (min-height: 611px) {
+      @media screen and (min-width: 769px) {
         padding-top: 2rem;
         padding-bottom: 1rem;
         img {
@@ -68,19 +69,10 @@ a.hyperlink {
     }
     .logo-prefeitura {
       text-align: center;
-      @media screen and (max-height: 610px) {
-        padding-top: 1rem;
-        img {
-          height: auto;
-          width: 100px;
-        }
-      }
-      @media screen and (min-height: 611px) {
-        padding-top: 2rem;
-        img {
-          height: 65px;
-          width: 171px;
-        }
+      padding-top: 2rem;
+      img {
+        height: 65px;
+        width: 171px;
       }
     }
   }
@@ -100,10 +92,14 @@ div.input-group.email-sme {
   .col-4 {
     padding-left: 0;
   }
-  .col-6 {
-    padding-right: 0;
-    margin-right: -12px;
+
+  @media screen and (min-width: 768px) {
+    .col-md-6 {
+      padding-right: 0;
+      margin-right: -12px;
+    }
   }
+
   select {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
@@ -247,6 +243,54 @@ div.input-group.email-sme {
         color: $grayDisabled;
         border-bottom: 3px solid $grayDisabled;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .login-bg {
+    width: 100%;
+    position: fixed;
+  }
+
+  .right-half {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: auto;
+
+    .container {
+      padding: 1rem;
+      height: auto;
+      transform: none;
+      background: rgba(255, 255, 255, 0.95);
+      left: 0%;
+      min-height: 90vh;
+      max-width: 720px;
+
+      .texto-simples-grande {
+        font-size: 20px;
+      }
+    }
+    background: rgba(255, 255, 255, 0.95);
+  }
+
+  .logo-sigpae {
+    img {
+      max-width: 100%;
+    }
+  }
+
+  div.input-group.email-sme .input-group-append {
+    padding-top: 0;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  .right-half {
+    .container {
+      padding: 1rem 5rem;
     }
   }
 }
