--- a/src/components/screens/Produto/Cadastro/Step2/style.scss
+++ b/src/components/screens/Produto/Cadastro/Step2/style.scss
@@ -39,5 +39,9 @@ div.cadastro-produto-step2 {
     border-radius: 4px;
     border-color: $grayPlaceholder;
     color: $grayPlaceholder;
+    height: 40px;
+  }
+  .botaoSalvar {
+    height: 40px;
   }
 }
