--- a/src/components/screens/Produto/Cadastro/Step3/components/Especificacoes/style.scss
+++ b/src/components/screens/Produto/Cadastro/Step3/components/Especificacoes/style.scss
@@ -2,4 +2,16 @@
   align-items: end;
   display: flex;
   padding-bottom: 5px;
+  max-height: 78px;
+}
+
+.erro-especificacoes {
+  color: #a50e05;
+  padding-top: 5px;
+  font-size: 12px;
+}
+
+.invalid-field {
+  box-shadow: none;
+  border-color: #a50e05 !important;
 }
