Feature: adicionar quantidade de alunos para o formulário de solicitação de alteração do tipo de alimentação

--- a/src/components/AlteracaoDeCardapio/style.scss
+++ b/src/components/AlteracaoDeCardapio/style.scss
@@ -34,7 +34,7 @@
 
 .descricao-periodos-alimentacao {
   display: grid;
-  grid-template-columns: 30% 33% 33%;
+  grid-template-columns: 22% 28% 28% 15%;
   grid-column-gap: 2%;
   margin-bottom: 0.5em;
 
@@ -48,7 +48,7 @@
 
 .item-periodo-alimentacao {
   display: grid;
-  grid-template-columns: 30% 33% 33%;
+  grid-template-columns: 22% 28% 28% 15%;
   grid-column-gap: 2%;
   margin-bottom: 0.5em;
 
