Feature: só pode exibir kits ativos, defaultValue para texArea

--- a/src/components/Shareable/PedidoKitLanche/OpcoesKits/CardKit/style.scss
+++ b/src/components/Shareable/PedidoKitLanche/OpcoesKits/CardKit/style.scss
@@ -42,6 +42,10 @@ div.card.meal-kit {
       &:not(:last-child) {
         border-bottom: 1px solid $grayInputBackground;
       }
+
+      p {
+        font-size: 13px;
+      }
     }
   }
 }
