Feature: botão cadastrar kit lanche, botão editar kit lanche, coluna para ações

--- a/src/components/screens/Cadastros/ConsultaKitLanche/components/ListagemKits/styles.scss
+++ b/src/components/screens/Cadastros/ConsultaKitLanche/components/ListagemKits/styles.scss
@@ -26,7 +26,7 @@
       align-items: center;
       text-align: center;
       display: grid;
-      grid-template-columns: 0.8fr 2fr 0.8fr 0.6fr;
+      grid-template-columns: 0.8fr 2fr 0.8fr 0.6fr 0.6fr;
     }
 
     .header-table {
@@ -50,6 +50,13 @@
     .body-table {
       font-weight: 500;
       color: #686868;
+
+      .botaoEditar {
+        background-color: #ffffff;
+        border: none;
+        outline: none;
+        color: #266397;
+      }
 
       .desativar-borda {
         border-left: 0px solid #e9eaea;
