--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -234,7 +234,6 @@ table.cadastro-empresa {
     border-bottom: 1px solid #ebeff2;
     &:first-child {
       padding-left: 20px;
-      width: 8%;
       font-weight: bold;
     }
 
@@ -288,7 +287,7 @@ table.cadastro-empresa {
   tr {
     td.container-detalhe {
       background: #f2fbfe;
-      padding: 0px 20px 15px 0px;
+      padding: 0px 20px 15px 20px;
 
       .secao-empresa {
         display: grid;
@@ -304,7 +303,7 @@ table.cadastro-empresa {
         .contato-empresa {
           margin-top: 2%;
           display: grid;
-          grid-template-columns: 40% 60%;
+          grid-template-columns: 33% 33% 33%;
         }
       }
 
