--- a/src/components/screens/DietaEspecial/Relatorio/style.scss
+++ b/src/components/screens/DietaEspecial/Relatorio/style.scss
@@ -17,3 +17,15 @@
 .botaoImprimirDieta {
   width: 65px;
 }
+
+.conferido {
+  color: #198459;
+  font-family: Roboto !important;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 16px;
+  align-items: center;
+  text-align: center;
+  padding: 10.75px;
+}
