--- a/src/components/Shareable/CardStatusDeSolicitacao/style.scss
+++ b/src/components/Shareable/CardStatusDeSolicitacao/style.scss
@@ -35,6 +35,9 @@
       font-weight: normal;
     }
   }
+  p.conferida {
+    color: #198459 !important;
+  }
   a.see-more {
     font-weight: bold;
     font-size: 13px;
