--- a/src/components/Shareable/Header/style.scss
+++ b/src/components/Shareable/Header/style.scss
@@ -13,6 +13,10 @@
       height: 55px;
       width: auto;
     }
+    .marca-d-agua {
+      width: 135px;
+      height: 40px;
+    }
   }
   .navbar-nav {
     padding-top: 0.5rem;
