--- a/src/components/screens/Produto/AvaliarReclamacaoProduto/components/TabelaProdutos/style.scss
+++ b/src/components/screens/Produto/AvaliarReclamacaoProduto/components/TabelaProdutos/style.scss
@@ -8,7 +8,7 @@
 
   .tabela-produto {
     display: grid;
-    grid-template-columns: 36% 16% 16% 16% 16%;
+    grid-template-columns: 36% 15% 15% 15% 15% 4%;
   }
 
   .tabela-header-produto {
@@ -27,21 +27,31 @@
   }
 
   .tabela-body-produto {
-    height: 48px;
+    min-height: 48px;
   }
 
-  .item-produto > div {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 18px;
-    padding: 5px 10px;
+  .item-produto {
+    div {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18px;
+      padding: 5px 10px;
 
-    display: flex;
-    align-items: center;
+      display: flex;
+      align-items: center;
 
-    color: #686868;
+      color: #686868;
 
-    border: 1px solid #e9eaea;
+      border: 1px solid #e9eaea;
+    }
+
+    div:last-child {
+      border-left: 1px solid #e9eaea;
+    }
+
+    div:nth-last-child(2) {
+      border-right: 0px;
+    }
   }
 
   .com-botao {
