--- a/src/components/screens/Notificacoes/components/CardNotificacao/style.scss
+++ b/src/components/screens/Notificacoes/components/CardNotificacao/style.scss
@@ -22,6 +22,12 @@
     background-color: #fff;
   }
 
+  .descricao-notificacao {
+    * {
+      font-size: 16px;
+    }
+  }
+
   .card-header-notificacao-lida {
     border-left: #a4a4a4 solid 8px !important;
     p,
