Alteração no tamanho do card e correção nos filtros

--- a/src/components/screens/Notificacoes/components/CardNotificacao/style.scss
+++ b/src/components/screens/Notificacoes/components/CardNotificacao/style.scss
@@ -48,6 +48,15 @@
     background-color: #f3f3f3;
   }
 
+  .card-header {
+    height: 110px;
+
+    .card-header-content {
+      height: 100%;
+      align-content: center;
+    }
+  }
+
   .data-notificacoes {
     font-size: 20px;
     font-weight: bold;
